@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Yanick Champoux
 copyright_year   = 2011
 
-version = 0.1.0
+version = 0.2.0
 
 [@YANICK]
 autoprereqs_skip = TestApp
