@@ -1,6 +1,8 @@
 Revision history for Dancer::Plugin::Cache
 
 {{$NEXT}}
+    - Add cache helper functions. Thanks to David Precious for the
+      suggestion. [RT#66714]
 
 0.1.0     2011-03-16 20:47:53 America/Montreal
 
